--- a/site/coral.ru/index-bottom.html
+++ b/site/coral.ru/index-bottom.html
@@ -12,7 +12,7 @@
     <section>
         <div class="contenu">
             <div class="actions">
-                <a href="javascript:;" class="buttonlike yellow" target="_blank">Выбрать тур</a>
+                <a href="https://www.coral.ru/packagetours/moskva-to-egipet-tours/?q=%7b%22Bgn%22%3a%2203.09.2022%22%2c%22End%22%3a%2209.09.2022%22%2c%22Dr%22%3a%223%22%2c%22Acc%22%3a%227%22%2c%22Gest%22%3a%222%22%2c%22Q%22%3a%22z3wAKl7LShHfXLILOghccZtJJYgRo5xru%2fyGgjy1ey%2f4Z8NDlDStizL86C%2bwHp%2feFxsQMX2CzSBdkoQ19mMc1HUCLczn1dc%2bKmKreYvOYZ7JGqPuALqtLKZcJHqVUgh%2fOIkjW6Emm24%2bIp0%2fRkpLlw%3d%3d%22%2c%22Ts%22%3a0%2c%22Las%22%3afalse%2c%22AcId%22%3a0%2c%22FDate%22%3a%220001-01-01T00%3a00%3a00Z%22%2c%22Ref%22%3afalse%2c%22Pstatus%22%3afalse%2c%22TransferPrice%22%3a0.0%2c%22Chr%22%3afalse%2c%22Rglr%22%3atrue%2c%22Srt%22%3a1%7d&f={%22Rh%22:false,%22Ao%22:[%22available%22]}&page=1" class="buttonlike yellow" target="_blank">Выбрать тур</a>
             </div>
         </div>
     </section>
