--- a/site/coral.ru/index.html
+++ b/site/coral.ru/index.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="actions">
-                <a href="javascript:;" class="buttonlike yellow" target="_blank">Выбрать тур</a>
+                <a href="https://www.coral.ru/packagetours/moskva-to-egipet-tours/?q=%7b%22Bgn%22%3a%2203.09.2022%22%2c%22End%22%3a%2209.09.2022%22%2c%22Dr%22%3a%223%22%2c%22Acc%22%3a%227%22%2c%22Gest%22%3a%222%22%2c%22Q%22%3a%22z3wAKl7LShHfXLILOghccZtJJYgRo5xru%2fyGgjy1ey%2f4Z8NDlDStizL86C%2bwHp%2feFxsQMX2CzSBdkoQ19mMc1HUCLczn1dc%2bKmKreYvOYZ7JGqPuALqtLKZcJHqVUgh%2fOIkjW6Emm24%2bIp0%2fRkpLlw%3d%3d%22%2c%22Ts%22%3a0%2c%22Las%22%3afalse%2c%22AcId%22%3a0%2c%22FDate%22%3a%220001-01-01T00%3a00%3a00Z%22%2c%22Ref%22%3afalse%2c%22Pstatus%22%3afalse%2c%22TransferPrice%22%3a0.0%2c%22Chr%22%3afalse%2c%22Rglr%22%3atrue%2c%22Srt%22%3a1%7d&f={%22Rh%22:false,%22Ao%22:[%22available%22]}&page=1" class="buttonlike yellow" target="_blank">Выбрать тур</a>
             </div>
         </div>
     </section>
@@ -71,7 +71,7 @@
                     </div>
                     <div class="actions">
                         <a href="https://www.coral.ru/main/egypt/sharm/" class="buttonlike transparent learn-more" target="_blank">Подробнее</a>
-                        <a href="" class="buttonlike yellow" target="_blank">Выбрать тур</a>
+                        <a href="https://www.coral.ru/packagetours/moskva-to-sharmelysheyhsharmelsheikh-tours/?q=%7b%22Bgn%22%3a%2204.09.2022%22%2c%22End%22%3a%2210.09.2022%22%2c%22Dr%22%3a%223%22%2c%22Acc%22%3a%227%22%2c%22Gest%22%3a%222%22%2c%22Q%22%3a%226IhTRzzue%2bbUdUtqEs5o%2fGulh4xAsiY4sSA3j%2fe1uvMbhJvcdxgabN7vAeekJ%2b3pCj3zuAjfzsoudJ2pGJA9zZ3zdxfj91V1BWKHp14VXld2XwqK6PTYqXKyrnchai1WzjIwt6O4ggCS5IxtBnyzCSX1NBm4dHIpfVIKeJ5JwAvMju4EupJIExMgEYKnrXsv%22%2c%22Ts%22%3a0%2c%22Las%22%3afalse%2c%22AcId%22%3a0%2c%22FDate%22%3a%220001-01-01T00%3a00%3a00Z%22%2c%22Ref%22%3afalse%2c%22Pstatus%22%3afalse%2c%22TransferPrice%22%3a0.0%2c%22Chr%22%3afalse%2c%22Rglr%22%3atrue%2c%22Srt%22%3a1%7d&f={%22Rh%22:false,%22Ao%22:[%22available%22]}&page=1" class="buttonlike yellow" target="_blank">Выбрать тур</a>
                     </div>
                 </div>
                 <div class="resort">
@@ -84,7 +84,7 @@
                     </div>
                     <div class="actions">
                         <a href="https://www.coral.ru/main/egypt/hurghada/" class="buttonlike transparent learn-more" target="_blank">Подробнее</a>
-                        <a href="" class="buttonlike yellow" target="_blank">Выбрать тур</a>
+                        <a href="https://www.coral.ru/packagetours/moskva-to-hurgadahurghada-tours/?q=%7b%22Bgn%22%3a%2204.09.2022%22%2c%22End%22%3a%2210.09.2022%22%2c%22Dr%22%3a%223%22%2c%22Acc%22%3a%227%22%2c%22Gest%22%3a%222%22%2c%22Q%22%3a%22o%2bHdryqZISSTAGZ6mJ1Wq61yfmEmbDmbtUFm8XPxjDJinnv8TiyvqFDPMvgvsmptPPfue5tv8dQ6VvLvsQu0vztw9zpMZK40NCGJtd2bqwhFHPYTyebkd8Tr%2fS2oE%2b648%2bA2lUFAV3yfqGcJZ%2bmrY2JTki9wZGCzBg%2b2GCeR2Kc%3d%22%2c%22Ts%22%3a0%2c%22Las%22%3afalse%2c%22AcId%22%3a0%2c%22FDate%22%3a%220001-01-01T00%3a00%3a00Z%22%2c%22Ref%22%3afalse%2c%22Pstatus%22%3afalse%2c%22TransferPrice%22%3a0.0%2c%22Chr%22%3afalse%2c%22Rglr%22%3atrue%2c%22Srt%22%3a1%7d&f={%22Rh%22:false,%22Ao%22:[%22available%22]}&page=1" class="buttonlike yellow" target="_blank">Выбрать тур</a>
                     </div>
                 </div>
                 <div class="resort">
@@ -97,7 +97,7 @@
                     </div>
                     <div class="actions">
                         <a href="https://www.coral.ru/main/egypt/makadibay/" class="buttonlike transparent learn-more" target="_blank">Подробнее</a>
-                        <a href="" class="buttonlike yellow" target="_blank">Выбрать тур</a>
+                        <a href="https://www.coral.ru/packagetours/moskva-to-makadibeymakadibay-tours/?q=%7b%22Bgn%22%3a%2204.09.2022%22%2c%22End%22%3a%2210.09.2022%22%2c%22Dr%22%3a%223%22%2c%22Acc%22%3a%227%22%2c%22Gest%22%3a%222%22%2c%22Q%22%3a%22GIm3zD%2bIiHTKqf%2bKJeojgkJmKsBv3ze6hHzeW24yrRhTOS00eWS6n7iTQcIkH6eG0L%2f4oXmZFhORn56LbbwmZufhrKc1yXNOMIo2KlWr%2bJlmmccNZtnhRdRIVtjyTjMBwmLUT1A64uXL5nqcV763S%2f%2fmqw4b1822Mn6hiDiqE9k%3d%22%2c%22Ts%22%3a0%2c%22Las%22%3afalse%2c%22AcId%22%3a0%2c%22FDate%22%3a%220001-01-01T00%3a00%3a00Z%22%2c%22Ref%22%3afalse%2c%22Pstatus%22%3afalse%2c%22TransferPrice%22%3a0.0%2c%22Chr%22%3afalse%2c%22Rglr%22%3atrue%2c%22Srt%22%3a1%7d&f={%22Rh%22:false,%22Ao%22:[%22available%22]}&page=1" class="buttonlike yellow" target="_blank">Выбрать тур</a>
                     </div>
                 </div>
                 <div class="resort">
@@ -110,7 +110,7 @@
                     </div>
                     <div class="actions">
                         <a href="https://www.coral.ru/main/egypt/marsaalam/" class="buttonlike transparent learn-more" target="_blank">Подробнее</a>
-                        <a href="" class="buttonlike yellow" target="_blank">Выбрать тур</a>
+                        <a href="https://www.coral.ru/packagetours/moskva-to-marsaalammarsaalam-tours/?q=%7b%22Bgn%22%3a%2204.09.2022%22%2c%22End%22%3a%2210.09.2022%22%2c%22Dr%22%3a%223%22%2c%22Acc%22%3a%227%22%2c%22Gest%22%3a%222%22%2c%22Q%22%3a%22mModW%2bOJaDofdsYZ4NW9SzMk05cjTGuDyVYTxZr2HH0Lau8rjOG8rY3tXDDdZHh4BGfMS33x4TiMw%2bhtgm0I%2bZt4U4F9dTkm%2bc6ZeVWyw57mhPLQNPtEN%2bHWdMtC%2bIOa2%2fEh4cVe1QJhWAbX527y25B9Kzp8vg0RcxRSpyWj4Hw%3d%22%2c%22Ts%22%3a0%2c%22Las%22%3afalse%2c%22AcId%22%3a0%2c%22FDate%22%3a%220001-01-01T00%3a00%3a00Z%22%2c%22Ref%22%3afalse%2c%22Pstatus%22%3afalse%2c%22TransferPrice%22%3a0.0%2c%22Chr%22%3afalse%2c%22Rglr%22%3atrue%2c%22Srt%22%3a1%7d&f={%22Rh%22:false,%22Ao%22:[%22available%22]}&page=1" class="buttonlike yellow" target="_blank">Выбрать тур</a>
                     </div>
                 </div>
                 <div class="resort">
@@ -123,7 +123,7 @@
                     </div>
                     <div class="actions">
                         <a href="https://www.coral.ru/main/egypt/elgouna/" class="buttonlike transparent learn-more" target="_blank">Подробнее</a>
-                        <a href="" class="buttonlike yellow" target="_blank">Выбрать тур</a>
+                        <a href="https://www.coral.ru/packagetours/moskva-to-elygunaelgouna-tours/?q=%7b%22Bgn%22%3a%2204.09.2022%22%2c%22End%22%3a%2210.09.2022%22%2c%22Dr%22%3a%223%22%2c%22Acc%22%3a%227%22%2c%22Gest%22%3a%222%22%2c%22Q%22%3a%22AbCX5Fl5oVzHo2SLUzKqxZMVy7D9FAVWBnPcbIoT5rKnvRbdDRcm3tVlLRpPyjUcni1bMthnNdTwaNdWcVNIpehLSoRqYmpPMLhP1jIaPCC0Fq90WjS2BX%2b6TLpP8UJQ0Rzi7CssVzh8AFmF30uIJmc5S3gahm8R136CN9aaS4E%3d%22%2c%22Ts%22%3a0%2c%22Las%22%3afalse%2c%22AcId%22%3a0%2c%22FDate%22%3a%220001-01-01T00%3a00%3a00Z%22%2c%22Ref%22%3afalse%2c%22Pstatus%22%3afalse%2c%22TransferPrice%22%3a0.0%2c%22Chr%22%3afalse%2c%22Rglr%22%3atrue%2c%22Srt%22%3a1%7d&f={%22Rh%22:false,%22Ao%22:[%22available%22]}&page=1" class="buttonlike yellow" target="_blank">Выбрать тур</a>
                     </div>
                 </div>
                 <div class="resort">
@@ -136,7 +136,7 @@
                     </div>
                     <div class="actions">
                         <a href="https://www.coral.ru/main/egypt/somabay/" class="buttonlike transparent learn-more" target="_blank">Подробнее</a>
-                        <a href="" class="buttonlike yellow" target="_blank">Выбрать тур</a>
+                        <a href="https://www.coral.ru/packagetours/moskva-to-somabeysomabay-tours/?q=%7b%22Bgn%22%3a%2204.09.2022%22%2c%22End%22%3a%2210.09.2022%22%2c%22Dr%22%3a%223%22%2c%22Acc%22%3a%227%22%2c%22Gest%22%3a%222%22%2c%22Q%22%3a%22fX4lvRzVu6oKp1ONzWZ9KLp42BYfsPyYjmJKZavpQ5Uz7U4%2fXztgH5XdesSbeeLk2PalG8Dhzi1iD%2fC7Q7aBopKIC4UpH1fx8aqYP3Ja2bno6fnBIput2DjBszNqGUhpcx2fcyKoLIrJCYcvofheZLk%2fGxYv3dD4TS%2fM7yEL1WE%3d%22%2c%22Ts%22%3a0%2c%22Las%22%3afalse%2c%22AcId%22%3a0%2c%22FDate%22%3a%220001-01-01T00%3a00%3a00Z%22%2c%22Ref%22%3afalse%2c%22Pstatus%22%3afalse%2c%22TransferPrice%22%3a0.0%2c%22Chr%22%3afalse%2c%22Rglr%22%3atrue%2c%22Srt%22%3a1%7d&f={%22Rh%22:false,%22Ao%22:[%22available%22]}&page=1" class="buttonlike yellow" target="_blank">Выбрать тур</a>
                     </div>
                 </div>
             </div>
@@ -165,7 +165,7 @@
                 <div class="pic" style="background-image: url(iii/pic-02.jpg);"><span> </span></div>
             </div>
             <div class="actions">
-                <a href="javascript:;" class="buttonlike yellow" target="_blank">Выбрать тур</a>
+                <a href="https://www.coral.ru/packagetours/moskva-to-egipet-tours/?q=%7b%22Bgn%22%3a%2203.09.2022%22%2c%22End%22%3a%2209.09.2022%22%2c%22Dr%22%3a%223%22%2c%22Acc%22%3a%227%22%2c%22Gest%22%3a%222%22%2c%22Q%22%3a%22z3wAKl7LShHfXLILOghccZtJJYgRo5xru%2fyGgjy1ey%2f4Z8NDlDStizL86C%2bwHp%2feFxsQMX2CzSBdkoQ19mMc1HUCLczn1dc%2bKmKreYvOYZ7JGqPuALqtLKZcJHqVUgh%2fOIkjW6Emm24%2bIp0%2fRkpLlw%3d%3d%22%2c%22Ts%22%3a0%2c%22Las%22%3afalse%2c%22AcId%22%3a0%2c%22FDate%22%3a%220001-01-01T00%3a00%3a00Z%22%2c%22Ref%22%3afalse%2c%22Pstatus%22%3afalse%2c%22TransferPrice%22%3a0.0%2c%22Chr%22%3afalse%2c%22Rglr%22%3atrue%2c%22Srt%22%3a1%7d&f={%22Rh%22:false,%22Ao%22:[%22available%22]}&page=1" class="buttonlike yellow" target="_blank">Выбрать тур</a>
             </div>
         </div>
     </section>
@@ -216,5 +216,4 @@
 
 </div>
 
-<!--<script src="js/index.js"></script>-->
 </body>
