--- a/site/coral.ru/index.html
+++ b/site/coral.ru/index.html
@@ -42,6 +42,10 @@
         </div>
     </section>
 
+    <section class="business-class">
+        <div class="contenu"></div>
+    </section>
+
     <section class="poi">
         <div class="contenu">
             <h2>Что интересного в Египте</h2>
